syntax = "proto3";

package resources.notifications;

import "resources/clientconfig/clientconfig.proto";
import "resources/jobs/job_props.proto";
import "resources/notifications/notifications.proto";
import "resources/userinfo/user_info.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/notifications;notifications";

// User related events
message UserEvent {
  oneof data {
    option (validate.required) = true;

    bool refresh_token = 1;
    // Notifications
    resources.notifications.Notification notification = 2;
    int32 notifications_read_count = 3;
    resources.userinfo.UserInfoChanged user_info_changed = 4;
  }
}

// Job related events
message JobEvent {
  oneof data {
    option (validate.required) = true;

    resources.jobs.JobProps job_props = 1;
  }
}

// Job grade events
message JobGradeEvent {
  oneof data {
    option (validate.required) = true;

    bool refresh_token = 1;
  }
}

// System related events
message SystemEvent {
  oneof data {
    option (validate.required) = true;

    // Client configuration update (e.g., feature gates, game settings, banner message)
    resources.clientconfig.ClientConfig client_config = 1;
  }
}
